css/style.css
* {
    margin: 0;
    padding: 0;
}



.canvas {
    position: absolute;
    left: 0;
    right: 0;
    margin: auto;
    margin-top: 5vw;
}

#canvas-draft {
    background-color: transparent;
    z-index: 1000;
}

.container {
    width: 1280px;
    height: 800px;
    overflow: hidden;
    transform: translate3d(0, 0, 0);
}

.container1 {
    height: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.container2 {
    height: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
}



.magnify-on {
    transform: scale(1.5);
    transform: center center;
} 

#canvas-real2 {
    z-index: -1;
}

input{
    vertical-align: middle;
    margin: 15px;
}

body {
    background-image: url(../images/background.jpg);
    background-size: 3700px auto;
    background-position: 52% 55%;
}



#imageLoader {
    width: 15%

}

.btnBg {
    background-color: white;
    border-color:#9acd32;
}

.btnHover {
    background-color: white;
    animation-name: button;
    animation-duration: .8s;
    animation-fill-mode: forwards;
}

@keyframes button {
    from {background-color: white;}
    to {background-color: #9acd32;}
}

.btnScale {
    animation-name: scale;
    animation-duration: .5s;
}

@keyframes scale {
    from {transform: scale(1);}
    to {transform: scale(1.2);}
}

